# worksheet2_group

./: CMakeLists.txt  README.md  custom_protocol.py  main.c  protocol.c  protocol.h
tests/: test_custom_protocol.py
